--- a/connector_prestashop/views/account_view.xml
+++ b/connector_prestashop/views/account_view.xml
@@ -6,11 +6,31 @@
     <record id="account_tax_group_connector_prestashop_tree_view" model="ir.ui.view">
         <field name="model">prestashop.account.tax.group</field>
         <field name="arch" type="xml">
-            <tree string="PrestaShop Account Tax Group" create="0">
-                <field name="backend_id" string="Backend" />
+            <tree string="PrestaShop Account Tax Group">
+                <field name="backend_id" string="Backend"/>
                 <field name="prestashop_id" />
+                <button
+                    name="bind_group_taxes"
+                    class="oe_highlight"
+                    type="object"
+                    string="Bind taxes"
+                />
             </tree>
         </field>
+    </record>
+
+    <record id="account_tax_group_connector_prestashop_form_view" model="ir.ui.view">
+       <field name="model">prestashop.account.tax.group</field>
+       <field name="arch" type="xml">
+            <form string="prestashop fields">
+                <sheet>
+                    <group col="1">
+                        <field name="backend_id"/>
+                        <field name="no_export"/>
+                    </group>
+                </sheet>
+            </form>
+       </field>
     </record>
 
     <record id="view_tax_group_tree" model="ir.ui.view">
@@ -48,5 +68,44 @@
         id="menu_action_tax_group_form"
         parent="account.account_account_menu"
     />
+
+    <record id="prestashop_binding_account_tax_form_view" model="ir.ui.view">
+        <field name="name">prestashop.binding.account.tax.form.view</field>
+        <field name="model">account.tax</field>
+        <field name="inherit_id" ref="account.view_tax_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//notebook" position="inside">
+                <page name="connector" string="Connector">
+                    <group string="PrestaShop Bindings">
+                        <field name="prestashop_bind_ids" nolabel="1" />
+                    </group>
+                </page>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="account_tax_connector_prestashop_tree_view" model="ir.ui.view">
+        <field name="model">prestashop.account.tax</field>
+        <field name="arch" type="xml">
+            <tree string="PrestaShop Account Tax">
+                <field name="backend_id" string="Backend"/>
+                <field name="prestashop_id" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="account_tax_connector_prestashop_form_view" model="ir.ui.view">
+       <field name="model">prestashop.account.tax</field>
+       <field name="arch" type="xml">
+            <form string="prestashop fields">
+                <sheet>
+                    <group col="1">
+                        <field name="backend_id"/>
+                        <field name="no_export"/>
+                    </group>
+                </sheet>
+            </form>
+       </field>
+    </record>
 
 </odoo>
