--- a/connector_prestashop/views/prestashop_backend_view.xml
+++ b/connector_prestashop/views/prestashop_backend_view.xml
@@ -279,6 +279,15 @@
                                     string="Export in background"
                                 />
                             </group>
+                            <group>
+                                <span>Export taxes</span>
+                                <button
+                                    name="export_account_taxes"
+                                    type="object"
+                                    class="oe_highlight"
+                                    string="Export in background"
+                                />
+                            </group>
                         </page>
                         <page string="Languages">
                             <field name="language_ids" nolabel="1">
