--- a/connector_prestashop/views/partner_view.xml
+++ b/connector_prestashop/views/partner_view.xml
@@ -15,8 +15,11 @@
                 <attribute name="invisible">0</attribute>
             </page>
             <page name="connector" position="inside">
-                <group string="PrestaShop Bindings">
+                <group string="PrestaShop Bindings"  attrs="{'invisible': [('type', '!=', 'contact')]}">
                     <field name="prestashop_bind_ids" nolabel="1" />
+                </group>
+                <group string="PrestaShop Address Bindings" attrs="{'invisible': [('type', '=', 'contact')]}">
+                    <field name="prestashop_address_bind_ids" nolabel="1" />
                 </group>
             </page>
         </field>
@@ -29,12 +32,11 @@
             <form string="PrestaShop Partner">
                 <group>
                     <field name="shop_group_id" />
-                    <field name="backend_id" />
+                    <field name="backend_id" force_save="1"/>
                     <field name="prestashop_id" />
                     <field name="company" />
                     <field name="date_add" />
                     <field name="date_upd" />
-                    <field name="group_ids" widget="many2many_tags" />
                     <field name="newsletter" />
                 </group>
             </form>
@@ -45,11 +47,11 @@
         <field name="name">prestashop.res.partner.tree</field>
         <field name="model">prestashop.res.partner</field>
         <field name="arch" type="xml">
-            <tree string="PrestaShop Partner">
-                <field name="backend_id" />
+            <tree editable="bottom" string="PrestaShop Partner">
                 <field name="shop_group_id" />
+                <field name="backend_id" force_save="1"/>
+                <field name="prestashop_id" />
                 <field name="company" />
-                <button name="resync" type="object" string="Resync" />
             </tree>
         </field>
     </record>
@@ -76,58 +78,11 @@
         <field name="name">prestashop.address.tree</field>
         <field name="model">prestashop.address</field>
         <field name="arch" type="xml">
-            <tree string="PrestaShop Address">
-                <field name="backend_id" />
+            <tree editable="bottom" string="PrestaShop Address">
+                <field name="prestashop_partner_id"/>
                 <field name="shop_group_id" />
-            </tree>
-        </field>
-    </record>
-
-    <record id="view_partner_category_form" model="ir.ui.view">
-        <field name="name">res.partner.category.form</field>
-        <field name="model">res.partner.category</field>
-        <field name="inherit_id" ref="base.view_partner_category_form" />
-        <field name="arch" type="xml">
-            <field name="parent_id" position="after">
-                <field name="prestashop_bind_ids">
-                    <form string="PrestaShop">
-                        <field name="backend_id" />
-                        <field name="prestashop_id" />
-                    </form>
-                    <tree string="PrestaShop">
-                        <field name="backend_id" />
-                    </tree>
-                </field>
-            </field>
-        </field>
-    </record>
-
-    <record id="view_prestashop_partner_category_form" model="ir.ui.view">
-        <field name="name">prestashop.res.partner.category.form</field>
-        <field name="model">prestashop.res.partner.category</field>
-        <field name="arch" type="xml">
-            <form string="PrestaShop Partner Category">
-                <group name="binding" string="Binding">
-                    <field name="backend_id" />
-                    <field name="prestashop_id" />
-                </group>
-                <group name="information" string="Information">
-                    <field name="name" />
-                    <field name="date_add" />
-                    <field name="date_upd" />
-                </group>
-            </form>
-        </field>
-    </record>
-
-    <record id="view_prestashop_partner_category_tree" model="ir.ui.view">
-        <field name="name">prestashop.res.partner.category.tree</field>
-        <field name="model">prestashop.res.partner.category</field>
-        <field name="arch" type="xml">
-            <tree string="PrestaShop Partner Category">
-                <field name="backend_id" />
+                <field name="backend_id" force_save="1"/>
                 <field name="prestashop_id" />
-                <field name="name" />
             </tree>
         </field>
     </record>
