--- a/connector_prestashop/views/account_view.xml
+++ b/connector_prestashop/views/account_view.xml
@@ -6,7 +6,7 @@
     <record id="account_tax_group_connector_prestashop_tree_view" model="ir.ui.view">
         <field name="model">prestashop.account.tax.group</field>
         <field name="arch" type="xml">
-            <tree string="PrestaShop Account Tax Group">
+            <tree editable="bottom" string="PrestaShop Account Tax Group">
                 <field name="backend_id" string="Backend"/>
                 <field name="prestashop_id" />
                 <button
@@ -87,7 +87,7 @@
     <record id="account_tax_connector_prestashop_tree_view" model="ir.ui.view">
         <field name="model">prestashop.account.tax</field>
         <field name="arch" type="xml">
-            <tree string="PrestaShop Account Tax">
+            <tree editable="bottom" string="PrestaShop Account Tax">
                 <field name="backend_id" string="Backend"/>
                 <field name="prestashop_id" />
             </tree>
